--- a/hospitality/book.html
+++ b/hospitality/book.html
@@ -52,6 +52,11 @@
     </nav>
     <!--=== End Navigation Bar ===-->
 
+    <section class="parallax-1">
+        <div class="parallax-inner">
+            <center><h1></h1></center>
+        </div>
+    </section>
 
 	<!--=== Heading ===-->
 	<div class="container content">
