--- a/hospitality/department.html
+++ b/hospitality/department.html
@@ -51,6 +51,12 @@
         </div>
     </nav>
 
+    <section class="parallax-1">
+        <div class="parallax-inner">
+            <center><h1>DEPARTMENTS & SERVICE</h1></center>
+        </div>
+    </section>
+
     <div class="container mt-4">
         <h2 class="text-center mb-4">Medical Departments & Services</h2>
         
