--- a/hospitality/hospital.html
+++ b/hospitality/hospital.html
@@ -54,6 +54,11 @@
         </div>
     </nav>
 
+    <section class="parallax-1">
+        <div class="parallax-inner">
+            <center><h1>MULTIHOSPITALS</h1></center>
+        </div>
+    </section>
 
     <div class="container mt-4">
         <h2 class="text-center mb-4">Find the Best Hospitals</h2>
