--- a/hospitality/unique.html
+++ b/hospitality/unique.html
@@ -54,6 +54,12 @@
         </div>
     </nav>
 
+    <section class="parallax-1">
+        <div class="parallax-inner">
+            <center><h1></h1></center>
+        </div>
+    </section>
+
     <div class="img-container">
         <!-- Background Image -->
         <img src="img/bg/kiranbg.jpg" alt="Background Image" class="bg-img">
