--- a/hospitality/index.html
+++ b/hospitality/index.html
@@ -106,31 +106,31 @@
         <div class="row" id="hospitalList">
             <div class="col-md-4 fade-in">
                 <div class="card">
-                    <img src="hospital1.jpg" class="card-img-top" alt="Hospital 1">
+                    <img src="img\bg\bgimg1.jpg" class="card-img-top" alt="Hospital 1">
                     <div class="card-body">
                         <h5 class="card-title">City Hospital</h5>
                         <p class="card-text">A top-rated hospital with advanced medical facilities.</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="kiran.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 fade-in">
                 <div class="card">
-                    <img src="hospital2.jpg" class="card-img-top" alt="Hospital 2">
+                    <img src="img\bg\sunshine1.jpg" class="card-img-top" alt="Hospital 2">
                     <div class="card-body">
                         <h5 class="card-title">Global Health Hospital</h5>
                         <p class="card-text">Specialized in emergency care and surgeries.</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="sunshine.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 fade-in">
                 <div class="card">
-                    <img src="hospital3.jpg" class="card-img-top" alt="Hospital 3">
+                    <img src="img\bg\Unique.jpg" class="card-img-top" alt="Hospital 3">
                     <div class="card-body">
                         <h5 class="card-title">Elite Care Hospital</h5>
                         <p class="card-text">Comprehensive care with state-of-the-art technology.</p>
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="unique.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
