--- a/hospitality/register.html
+++ b/hospitality/register.html
@@ -51,6 +51,12 @@
         </div>
     </nav>
 
+    <section class="parallax-1">
+        <div class="parallax-inner">
+            <center><h1>REGISTER & Login</h1></center>
+        </div>
+    </section>
+
     <div class="form">
         <div class="container">
             <div class="forms-container">
