--- a/hospitality/book.html
+++ b/hospitality/book.html
@@ -166,7 +166,7 @@
                     </fieldset>
 
                     <footer>
-                    <button type="submit" class="btn-u">Send message</button>
+                    <button type="button" class="btn-u" onclick="showMsg()">Send message</button>
                     </footer>
                 </form>
             </div><!--/col-md-9-->
@@ -182,12 +182,12 @@
                 <div class="hline" style="margin-top: 20px;"><h2>Business Hours</h2></div>
                 <ul class="list-unstyled " style="margin-bottom: 30px;">
                     <li><strong>Monday-Saturday:</strong> 24/7 Available.</li>
-                    <li><strong>Sunday:</strong> 4 AM to 11 PM.</li>
+                    <li><strong>Sunday:</strong>Depend on the hospital</li>
                 </ul>
     
                 <!-- Why choose us? -->
                 <div class="hline"><h2>Why Choose Us?</h2></div>
-                <p>All healthcare facilities can be accessed here under one roof, making Galgotias Hospital a one point contact for all your healthcare needs.</p>
+                <p>All healthcare facilities can be accessed here under one roof, making MultiHospital a one point contact for all your healthcare needs.</p>
                 <ul class="list-unstyled">
                     <li><i class="fa fa-check color-green"></i> 24/7 Ambulance Support.</li>
                     <li><i class="fa fa-check color-green"></i> Eminent and Experienced Doctors.</li>
@@ -196,6 +196,52 @@
             </div><!--/col-md-3-->
         </div><!--/row-->
     </div><!--/container-->
+
+    <!-- Verification Modal -->
+    <div id="verificationModal" class="modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Enter Verification Code</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p>A verification code has been sent to your email.</p>
+                    <input type="text" id="verificationCodeInput" class="form-control" placeholder="Enter Code">
+                    <p id="verificationError" style="color: red; display: none;">Incorrect Code. Try Again.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="verifyCode()">Verify</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        let generatedCode = ""; // Global variable to store the verification code
+
+        function showMsg() {
+            generatedCode = Math.floor(100000 + Math.random() * 900000); // Generate 6-digit code
+            alert("Your verification code is: " + generatedCode); // Simulate sending via email (replace with actual email logic)
+            
+            let modal = new bootstrap.Modal(document.getElementById("verificationModal"));
+            modal.show();
+        }
+
+        function verifyCode() {
+            let userCode = document.getElementById("verificationCodeInput").value;
+            let errorMsg = document.getElementById("verificationError");
+
+            if (userCode == generatedCode) {
+                alert("Your appointment has been booked successfully!");
+                location.reload(); // Refresh page after verification
+            } else {
+                errorMsg.style.display = "block";
+            }
+        }
+
+    </script>
+    <!-- End Verification Modal -->
 
     <!--=== Footer ===-->
     <div class="footer-v1">
