--- a/hospitality/department.html
+++ b/hospitality/department.html
@@ -8,6 +8,9 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+
      <!-- Custom CSS -->
      <link rel="stylesheet" href="css\header.css">
      <link rel="stylesheet" href="css\doctor.css">
@@ -66,7 +69,7 @@
                     <input type="text" class="form-control" id="departmentName" placeholder="Search Department">
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary w-100" id="searchBtn">Search</button>
+                    <button class="btn btn-primary w-100" id="searchBtn" style="background-color: rgb(42, 81, 139);">Search</button>
                 </div>
             </div>
         </div>
@@ -114,75 +117,98 @@
     </script>
 
 
-    <!--=== About Section 3 ===-->
-    <!-- OUR DEPARTMENTS SECTION -->
-    <div class="bg-color-light">
-        <div class="container py-5">
-            <div class="text-center mb-5">
-                <h2 class="section-title">OUR DEPARTMENTS</h2>
-                <div class="section-line"></div>
-                <p class="section-subtitle">Galgotias Hospital is spread over a massive 6-acre campus, providing <strong>300+ beds</strong> and catering for nearly 45 super-specialties.</p>
-            </div>
+    <!--=== Section 3 ===-->
+    <!-- Chat Icon -->
+    <div class="chat-icon" onclick="toggleChat()">
+        <i class="fa-solid fa-comment-medical"></i>
+    </div>
 
-            <!-- Service Blocks -->
-            <div class="row g-4">
-                <div class="col-md-6">
-                    <div class="service-block-v8">
-                        <img class="icon" src="img\medical\009.png">
-                        <div class="service-block-desc">
-                            <h3>Cardiology</h3>
-                            <p>Our top cardiac experts specialize in accurate diagnosis and advanced treatments for various heart conditions.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="service-block-v8">
-                        <img class="icon" src="img\medical\010.png">
-                        <div class="service-block-desc">
-                            <h3>Dermatology & Cosmetology</h3>
-                            <p>Experienced dermatologists offering comprehensive skin and cosmetic care for all patients.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="service-block-v8">
-                        <img class="icon" src="img\medical\001.png">
-                        <div class="service-block-desc">
-                            <h3>Emergency Care, CCU, & ICU</h3>
-                            <p>24x7 patient care with a multidisciplinary approach ensuring holistic treatment.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="service-block-v8">
-                        <img class="icon" src="img\medical\011.png">
-                        <div class="service-block-desc">
-                            <h3>General Surgery</h3>
-                            <p>Expert general surgeons performing complex surgeries with precision and care.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="service-block-v8">
-                        <img class="icon" src="img\medical\012.png">
-                        <div class="service-block-desc">
-                            <h3>Health Checkup Packages</h3>
-                            <p>Affordable checkup packages designed for early diagnosis and preventive care.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="service-block-v8">
-                        <img class="icon" src="img\medical\013.png">
-                        <div class="service-block-desc">
-                            <h3>Neurology</h3>
-                            <p>Highly skilled team of neurologists, neurosurgeons, and rehabilitation experts for advanced neurocare.</p>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- End Service Blocks -->
+    <!-- Chatbox -->
+    <div class="chatbox" id="chatBox">
+        <div class="chat-header">
+            Hospital Chat Support
+            <i class="fa-solid fa-xmark" onclick="toggleChat()"></i>
+        </div>
+        <div class="chat-body" id="chatBody">
+            <p><strong>Bot:</strong> Welcome to Hospital Chat Support! How can I assist you today?</p>
+        </div>
+        <div class="chat-input">
+            <input type="text" id="userInput" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
+            <button onclick="sendMessage()">Send</button>
         </div>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", loadMessages);
+
+        function toggleChat() {
+            let chatBox = document.getElementById("chatBox");
+            chatBox.style.display = (chatBox.style.display === "flex") ? "none" : "flex";
+        }
+
+        function sendMessage() {
+            let inputField = document.getElementById("userInput");
+            let message = inputField.value.trim();
+            if (message === "") return;
+
+            addMessage("You", message);
+            inputField.value = "";
+
+            // Simulate bot response
+            setTimeout(() => {
+                let botReply = generateBotResponse(message);
+                addMessage("Bot", botReply);
+            }, 1000);
+        }
+
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+            }
+        }
+
+        function addMessage(sender, text) {
+            let chatBody = document.getElementById("chatBody");
+            let newMessage = `<p><strong>${sender}:</strong> ${text}</p>`;
+            chatBody.innerHTML += newMessage;
+            chatBody.scrollTop = chatBody.scrollHeight;
+
+            saveMessage(sender, text);
+        }
+
+        function generateBotResponse(userMessage) {
+            const responses = {
+                "hello": "Hello! How can I assist you?",
+                "doctor availability": "Please specify the department (e.g., cardiology, orthopedics).",
+                "emergency services": "Our emergency services are available 24/7. Please call 911 for immediate assistance.",
+                "appointment booking": "You can book an appointment online or call our front desk at (123) 456-7890.",
+                "hospital location": "We are located at 123 Health St, Cityville. Do you need directions?",
+                "visiting hours": "Visiting hours are from 10 AM to 8 PM. Special permissions apply for ICU patients.",
+                "covid-19 precautions": "We follow strict COVID-19 safety measures, including mask mandates and sanitization.",
+                "contact details": "You can reach us at (123) 456-7890 or email us at support@hospital.com.",
+                "ambulance service": "Our ambulance service is available 24/7. Call (123) 456-7890 for assistance.",
+                "help": "Sure! You can ask about doctor availability, appointment booking, emergency services, and more."
+            };
+
+            let lowerMsg = userMessage.toLowerCase();
+            return responses[lowerMsg] || "I'm not sure about that. You can call our help desk at (123) 456-7890.";
+        }
+
+        function saveMessage(sender, text) {
+            let messages = JSON.parse(localStorage.getItem("chatMessages")) || [];
+            messages.push({ sender, text });
+            localStorage.setItem("chatMessages", JSON.stringify(messages));
+        }
+
+        function loadMessages() {
+            let chatBody = document.getElementById("chatBody");
+            let messages = JSON.parse(localStorage.getItem("chatMessages")) || [];
+            messages.forEach(msg => {
+                chatBody.innerHTML += `<p><strong>${msg.sender}:</strong> ${msg.text}</p>`;
+            });
+            chatBody.scrollTop = chatBody.scrollHeight;
+        }
+    </script>
     <!--=== End About Section 3===-->
     
 
