--- a/hospitality/book.html
+++ b/hospitality/book.html
@@ -34,19 +34,19 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li id="registerOption" class="nav-item"><a class="nav-link" href="register.html">Registration</a></li>
                     <button class="nav-button animated-btn" onclick="redirectToBooking()">Book Appointment</button>
-                    <li id="profileNav" class="nav-item" style="display: none;">
-                        <div id="profileContainer">
-                            <div id="profileLogo" class="profile-logo"></div>
-                            <span id="profileInitial" style="display: none;">U</span>
-                            <span id="dropdownArrow">▼</span>
-                        </div>
-                        <div id="profileDropdown" class="dropdown1">
-                            <a href="profile.html">Edit Profile</a>
-                            <a href="#">Help & Support</a>
-                            <a href="#" id="logout">Logout</a>
-                        </div>
-                    </li>
                 </ul>
+                <li id="profileNav" class="nav-item" style="display: none;">
+                    <div id="profileContainer">
+                        <div id="profileLogo" class="profile-logo"></div>
+                        <span id="profileInitial" style="display: none;">U</span>
+                        <span id="dropdownArrow">▼</span>
+                    </div>
+                    <div id="profileDropdown" class="dropdown1">
+                        <a href="profile.html">View Profile</a>
+                        <a href="#">Help & Support</a>
+                        <a href="#" id="logout">Logout</a>
+                    </div>
+                </li>
             </div>
         </div>
     </nav>
