--- a/hospitality/unique.html
+++ b/hospitality/unique.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css\header.css">
-    <link rel="stylesheet" href="css\hospital.css">
-    <link rel="stylesheet" href="css\kiran.css">
     <link rel="stylesheet" href="css\unique.css">
     <link rel="stylesheet" href="css\profile.css">
     <link rel="stylesheet" href="css\footer.css">
@@ -37,19 +35,19 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                     <li id="registerOption" class="nav-item"><a class="nav-link" href="register.html">Registration</a></li>
                     <button class="nav-button animated-btn" onclick="redirectToBooking()">Book Appointment</button>
-                    <li id="profileNav" class="nav-item" style="display: none;">
-                        <div id="profileContainer">
-                            <div id="profileLogo" class="profile-logo"></div>
-                            <span id="profileInitial" style="display: none;">U</span>
-                            <span id="dropdownArrow">▼</span>
-                        </div>
-                        <div id="profileDropdown" class="dropdown1">
-                            <a href="profile.html">Edit Profile</a>
-                            <a href="#">Help & Support</a>
-                            <a href="#" id="logout">Logout</a>
-                        </div>
-                    </li>
                 </ul>
+                <li id="profileNav" class="nav-item" style="display: none;">
+                    <div id="profileContainer">
+                        <div id="profileLogo" class="profile-logo"></div>
+                        <span id="profileInitial" style="display: none;">U</span>
+                        <span id="dropdownArrow">▼</span>
+                    </div>
+                    <div id="profileDropdown" class="dropdown1">
+                        <a href="profile.html">View Profile</a>
+                        <a href="#">Help & Support</a>
+                        <a href="#" id="logout">Logout</a>
+                    </div>
+                </li>
             </div>
         </div>
     </nav>
@@ -397,5 +395,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="script.js"></script>
+    <script src="js/header.js"></script>
 </body>
 </html>
