--- a/hospitality/profile.html
+++ b/hospitality/profile.html
@@ -73,7 +73,7 @@
                 <button class="btn btn-primary" id="editBtn">Edit Profile</button>
                 <button class="btn btn-danger" id="removeAvatarBtn">Remove Photo</button>
             </div>
-            <div id="editForm" class="mt-4 fade-in">
+            <div id="editForm" class="mt-4 fade-in1">
                 <div class="mb-3">
                     <label class="form-label">Name</label>
                     <input type="text" id="name" class="form-control" value="John Doe">
